testing addition of "lang" attributes.

--- a/index.html
+++ b/index.html
@@ -2010,14 +2010,14 @@
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Fəqər əskä Mäqabər</cite>, H. Alemayehu. Berhanenna Selam Printing Enterprise, 1965. Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>ፍቅር፡እስከ፡መቃብር</cite>፣ ሀዲስ አለማየሁ። ብርሃንና ሰላም ማተሚያ ድርጀት፣ ፲፱፻፶፰። አዲስ አበባ።</span></p>
+        <span style="margin-left:2em;" lang="am"> <cite>ፍቅር፡እስከ፡መቃብር</cite>፣ ሀዲስ አለማየሁ። ብርሃንና ሰላም ማተሚያ ድርጀት፣ ፲፱፻፶፰። አዲስ አበባ።</span></p>
       </dd>
       <dt>Gebre, 2004</dt>
       <dd>
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Tegbarawi Yetsihifet Memariya</cite>, D. Gebre. Commercial Printing Enterprises, 2004. Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>ተግባራዊ፡የጽህፈት፡መማሪያ</cite>፣ ደረጀ ገብሬ። ንግድ ማተሚያ ድርጅት፣ ሚያዝያ 1996። አዲስ አበባ።</span></p>
+        <span style="margin-left:2em;" lang="am"> <cite>ተግባራዊ፡የጽህፈት፡መማሪያ</cite>፣ ደረጀ ገብሬ። ንግድ ማተሚያ ድርጅት፣ ሚያዝያ 1996። አዲስ አበባ።</span></p>
       </dd>
     </dl>
     <h2>Full Image References</h2>
@@ -2030,35 +2030,35 @@
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Yeografi LeEthiopia Lijoch Tiqim</cite>, O. Erikson. Page 35. Swedish Mission, 1921 (1913 EC). Asmara.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>የኦግራፊ። ለኢትዮጵያ፡ልጆች፡ጥቅም</cite>፣ ኤሪክሶን። ገጽ ፴፭። የሚስዮንግ፡ስዌዱኣማህተም፡ታተመች፣ ፲፱፻፲፫። አስመራ።</span></p>
+        <span style="margin-left:2em;" lang="am"> <cite>የኦግራፊ። ለኢትዮጵያ፡ልጆች፡ጥቅም</cite>፣ ኤሪክሶን። ገጽ ፴፭። የሚስዮንግ፡ስዌዱኣማህተም፡ታተመች፣ ፲፱፻፲፫። አስመራ።</span></p>
       </dd>
       <dt>Gubenya, 1973</dt>
       <dd>
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Alweledem</cite>, A. Gubenya. Page 87. Brana Publisher,  1973 (1966 EC). Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>አልወለደም</cite>፣ አቤ ጉበኛ። ገጽ ፹፯። ብራና ማተሚያ ደርጅት ታተመ፣ ፲፱፻፷፮። አዲስ አበባ።</span></p>
+        <span style="margin-left:2em;" lang="am"> <cite>አልወለደም</cite>፣ አቤ ጉበኛ። ገጽ ፹፯። ብራና ማተሚያ ደርጅት ታተመ፣ ፲፱፻፷፮። አዲስ አበባ።</span></p>
       </dd>
       <dt>Itedalewe, 1987</dt>
       <dd>
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Ḥaṣir Tarix Nebiy Muḥamed</cite>, J.H.A. Itedalewe. Page 35. Selam Printing House, 1987 (1979 EC). Asmara.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>ሐጺር ታሪኽ ነቢይ ሙሐመድ (ሰለላሁ ዓለይሂ ወሰለም) ብጅብሪል</cite>፣ ጅብሪል ሐጂ አቡበከር እተዳለወ። ገጽ 35። ቤት ማኅተም ሰላም፣ ፲፱፻፸፰። አሥመራ።</span></p>
+        <span style="margin-left:2em;" lang="ti"> <cite>ሐጺር ታሪኽ ነቢይ ሙሐመድ (ሰለላሁ ዓለይሂ ወሰለም) ብጅብሪል</cite>፣ ጅብሪል ሐጂ አቡበከር እተዳለወ። ገጽ 35። ቤት ማኅተም ሰላም፣ ፲፱፻፸፰። አሥመራ።</span></p>
       </dd>
       <dt>Kifle, 1955</dt>
       <dd>
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite>, K.W. Kifle. Pages 65 &amp; 159. Artistic Printers, 1955 (1948 EC). Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>መጽሐፈ፡ሰዋስው፡ወግስ፡ወመዝገበ፡ቃላት፡ሐዲስ</cite>፣ ኪዳነ፡ወልድ፡ክፍሌ። ገጾች ፷፭ እና ፻፶፱። አርቲስቲክ፡ማተሚያ፡ቤት፣ ፲፱፻፵፰። አዲስ አበባ።</span></p>
+        <span style="margin-left:2em;" lang="gez"> <cite>መጽሐፈ፡ሰዋስው፡ወግስ፡ወመዝገበ፡ቃላት፡ሐዲስ</cite>፣ ኪዳነ፡ወልድ፡ክፍሌ። ገጾች ፷፭ እና ፻፶፱። አርቲስቲክ፡ማተሚያ፡ቤት፣ ፲፱፻፵፰። አዲስ አበባ።</span></p>
       </dd>
       <dt>Weldemariam, 1995</dt>
       <dd>
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Maṣḥafa Ṣalot Mes Ser’ate Kiddase Betegreññā</cite>, B. Weldemariam. Page 32. Mahbere Haawaryat F-Ha Bet Mahtem Tehatmet, 1995 (1988 EC). Asmera.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>መጽሐፈ ጸሎት ምስ ሥርዓተ ቅዳሴ ብትግርኛ</cite>፣ በርሀ ወልደማርያም። ገጽ ፴፪። ማኅበረ ሐዋርያት ፍ-ሃ ቤት ማኅተም ተኀትመት፣ ፲፱፻፹፰። አሥመራ።</span></p>
+        <span style="margin-left:2em;" lang="gez"> <cite>መጽሐፈ ጸሎት ምስ ሥርዓተ ቅዳሴ ብትግርኛ</cite>፣ በርሀ ወልደማርያም። ገጽ ፴፪። ማኅበረ ሐዋርያት ፍ-ሃ ቤት ማኅተም ተኀትመት፣ ፲፱፻፹፰። አሥመራ።</span></p>
       </dd>
     </dl>
   </section>
