Added Timerte Slaq in Amharic, KWK spelling.

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <p>Additionally the following punctuation is observed to be used with Ethiopic writing:</p>
     <p style="margin-left: 20px"><code>$ : , € @ …</code></p>
     <p>Inverted exclaimation mark is repurposed and utilized differently than in its Western usage.
-       In Ethiopic writing the inverted exclaimation mark is known as “Timherte Slaq” appears at the end of
+       In Ethiopic writing the inverted exclaimation mark is known as “Timirte Slaq” (ትእምርተ፡ሥላቅ) appears at the end of
        a sentence and will denote sarcasm. All borrowed punctuation is subject to typeface alignment with Ethiopic weights and shapes, an aesthetic
        enhancement discussed in this section as <a href="#ethiopicized_punctuation">"Ethiopicized Punctuation"</a>.</p>
   </section>
