More lang tags added.

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
       </figure>
       <p>The relative heights of letters used in different languages may also change with typeface as this next figure illustrates. </p>
       <figure id="comparative_height_blin_tigrinya"> <img src="images/Z-Reference-Abyssinica.png" alt=""/>
-        <figcaption>Comparative letter heights change with typeface, ቕ of Blin and Tigrinya now exceeds the heights of Amharic.</figcaption>
+        <figcaption>Comparative letter heights change with typeface, <span lang="am">ቕ</span> of Blin and Tigrinya now exceeds the heights of Amharic.</figcaption>
       </figure>
       <p> With these caveats considered, “Zen” alignment is a means to optimize an Ethiopic-Latin typeface pair that is suitable for a general
         use case when priori knowledge of a document language is unknown. Its basis is reviewed here.
-        The Latin letter “Z” and Ethiopic letter "ን" are chosen as pairing symbols representative of the mean height .  They both feature broad
+        The Latin letter “Z” and Ethiopic letter <span lang="am">“ን”</span> are chosen as pairing symbols representative of the mean height .  They both feature broad
         horizontal strokes that are easy for the eye to follow as a nearly continuous stroke.
         Ethiopic letters that were introduced as an extension to the Ge’ez core will  typically feature a macron or other modifier at the top of
         a base letter in order to form the extension letter. The macron necessarily extends the height of a letter.  Using the top of the macron
@@ -150,11 +150,11 @@
       <figure id="align_top_symbol"> <img src="images/Z-Ny-N-Top-Aligned.png" alt=""/>
         <figcaption>Alignment and top of symbols (Ethiopic letters too squat).</figcaption>
       </figure>
-      <p> A better approach is to align Z with caron (Ž) against ን with marcon (ኝ) while aligning and Z with ን and find typefaces with a good tuple of aligned pairings.</p>
+      <p> A better approach is to align Z with caron (Ž) against <span lang="am">ን</span> with marcon <span lang="am">(ኝ)</span> while aligning and Z with ን and find typefaces with a good tuple of aligned pairings.</p>
       <figure id="align_below_accent"> <img src="images/Z-caron-Ny-Z-N-Alignment.png" alt=""/>
         <figcaption>Alignment below accent (better sizing).</figcaption>
       </figure>
-      <p>Going further, we may assume that the ኝ and Ž will align satisfactorily (optionally check any irregularities) and simply align the Z-ን pair.
+      <p>Going further, we may assume that the <span lang="am">ኝ</span> and Ž will align satisfactorily (optionally check any irregularities) and simply align the Z-ን pair.
         Phonetically the sequence of these two letters would sound like “zen”, hence the name.</p>
       <figure id="zen_reference_alignment"> <img src="images/Z-N-Alignment.png" alt=""/>
         <figcaption>Z-ን or “Zen” Reference Alignment.</figcaption>
@@ -341,7 +341,7 @@
     <p>Additionally the following punctuation is observed to be used with Ethiopic writing:</p>
     <p style="margin-left: 20px"><code>$ : , € @ …</code></p>
     <p>Inverted exclaimation mark is repurposed and utilized differently than in its Western usage.
-       In Ethiopic writing the inverted exclaimation mark is known as “Timirte Slaq” (ትእምርተ፡ሥላቅ) appears at the end of
+       In Ethiopic writing the inverted exclaimation mark is known as “Timirte Slaq” (<span lang="am">ትእምርተ፡ሥላቅ</span>) appears at the end of
        a sentence and will denote sarcasm. All borrowed punctuation is subject to typeface alignment with Ethiopic weights and shapes, an aesthetic
        enhancement discussed in this section as <a href="#ethiopicized_punctuation">"Ethiopicized Punctuation"</a>.</p>
   </section>
@@ -353,18 +353,18 @@
          Usage rules are as follows:</p>
       <dl>
         <dt lang="am">፣ - ነጠላ ሠረዝ</dt>
-        <dd><span class="uname">U+1363 ETHIOPIC COMMA</span> (አማ/ ነጠላ ሠረዝ, ትግ/ ንጽል ሰረዝ) is used as a comma in Ethiopian practices and as a semicolon in Eritrea. ፣ will also be
+        <dd><span class="uname">U+1363 ETHIOPIC COMMA</span> <span lang="am">(አማ/ ነጠላ ሠረዝ, ትግ/ ንጽል ሰረዝ)</span> is used as a comma in Ethiopian practices and as a semicolon in Eritrea. ፣ will also be
               used in Ge’ez writing as a semicolon (is this a modern usage or classic?).
-              <span class="uname">U+1364 ETHIOPIC SEMICOLON</span>, ፤, in turn is used as a colon in Eritrean writing (verify).</dd>
+              <span class="uname">U+1364 ETHIOPIC SEMICOLON</span>, <span lang="am">፤</span>, in turn is used as a colon in Eritrean writing (verify).</dd>
         <dt lang="am">፥ - ንዑስ ሠረዝ</dt>
         <dd><span class="uname">U+1365 ETHIOPIC COLON</span> in contrast to its Unicode name, is never(?) used as a colon in any known Ethiopic practices.
-              Rather, it is a classical glyph variant of <span class="uname">U+1364 ETHIOPIC SEMICOLON</span> (፣). ፥ is the default comma glyph in Ge’ez writing and is the preferred
-              comma glyph by some modern writers writing in other languages. ፥ is the default comma in most Amharic bibles, likely in keeping with
+              Rather, it is a classical glyph variant of <span class="uname">U+1364 ETHIOPIC SEMICOLON</span> <span lang="am">(፣)</span>. <span lang="am">፥</span> is the default comma glyph in Ge’ez writing and is the preferred
+              comma glyph by some modern writers writing in other languages. <span lang="am">፥</span> is the default comma in most Amharic bibles, likely in keeping with
               the Ge’ez Bible that the Amharic would have been translated from.  Some modern Bible translations into Amharic, as well as other religious
-              literature, will use ፣ as the default comma in prose but maintain ፥ for passage references, e.g. ማቴ4፥23 , ዮሐ13፥16 , etc. Given this
+              literature, will use <span lang="am">፣</span> as the default comma in prose but maintain <span lang="am">፥</span> for passage references, e.g. <span lang="am">ማቴ4፥23 , ዮሐ13፥16 ,</span> etc. Given this
               common usage in religious materials “ecclesiastical comma” is a practical English term for referring to the ፥ glyph variant.  Kidane Wolde Kifle and Desta Tekle Wolde note the equivalence of the two commas. </dd>
         <dt lang="am">፡ - ንዑስ ነጥብ</dt>
-        <dd><span class="uname">U+1361 ETHIOPIC WORDSPACE</span> (አማ/ ሁለት ነጥብ, ትግ/ ክልተ ነጥቢ) in keeping with Ge’ez heritage, is used as the word separator (i.e. space) in the classical writing practices
+        <dd><span class="uname">U+1361 ETHIOPIC WORDSPACE</span> <span lang="am">(አማ/ ሁለት ነጥብ, ትግ/ ክልተ ነጥቢ)</span> in keeping with Ge’ez heritage, is used as the word separator (i.e. space) in the classical writing practices
               of both Eritrean and Ethiopia.  In modern Eritrean writing practices <span class="uname">ETHIOPIC WORDSPACE</span> will be used in the role of a comma (illustrated in Figure <a href="#ecclesiastical_emphasis_sample"></a>).
               When used in modern Ethiopian writing, it retains its classic role as word separator (space).
               See <a href="#wordspace_in_comma_context"></a> for elaboration on this topic. </dd>
