A few more lang tags added.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <figure id="align_top_symbol"> <img src="images/Z-Ny-N-Top-Aligned.png" alt=""/>
         <figcaption>Alignment and top of symbols (Ethiopic letters too squat).</figcaption>
       </figure>
-      <p> A better approach is to align Z with caron (Ž) against <span lang="am">ን</span> with marcon <span lang="am">(ኝ)</span> while aligning and Z with ን and find typefaces with a good tuple of aligned pairings.</p>
+      <p> A better approach is to align Z with caron (Ž) against <span lang="am">ን</span> with marcon <span lang="am">(ኝ)</span> while aligning and Z with <span lang="am">ን</span> and find typefaces with a good tuple of aligned pairings.</p>
       <figure id="align_below_accent"> <img src="images/Z-caron-Ny-Z-N-Alignment.png" alt=""/>
         <figcaption>Alignment below accent (better sizing).</figcaption>
       </figure>
@@ -516,8 +516,8 @@
     </section>
 
     <section id="ethiopic_gemination_mark_positioning">
-      <h4>Ethiopic Gemination Mark (ጥበቅ) Vertical Positioning</h4>
-      <p>The Ethiopic gemination mark, ጥበቅ, is almost universally found at a fixed height above the baseline in typeset literature. The mark’s position must
+      <h4>Ethiopic Gemination Mark <span lang="am">(ጥበቅ)</span> Vertical Positioning</h4>
+      <p>The Ethiopic gemination mark, <span lang="am">ጥበቅ,</span> is almost universally found at a fixed height above the baseline in typeset literature. The mark’s position must
          then be fixed so that it remains above the tallest Ethiopic letter symbol; this produces a variable height gap between the top of the letter and the mark.
          Conversely, when the symbol is hand written (often above typeset text) the mark will be found at a variable height above the baseline and demonstrating
          a fixed height above the letter symbol.
@@ -601,7 +601,7 @@
 
       <section id="ethiopic_whitespace_rules">
         <h4>Rules of Applying Whitespace in Ethiopic Text</h4>
-        <p>When Ethiopic Wordspace (፡) is used to separate words, there may still be some valid application for white space “ ”. White space is permittable to support the following formatting needs:</p>
+        <p>When Ethiopic Wordspace (<span lang="am">፡</span>) is used to separate words, there may still be some valid application for white space “ ”. White space is permittable to support the following formatting needs:</p>
         <ul>
           <li>Indentation.</li>
           <li>Following a counter suffix.</li>
