More lang tags added.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </figure>
       <p> With these caveats considered, “Zen” alignment is a means to optimize an Ethiopic-Latin typeface pair that is suitable for a general
         use case when priori knowledge of a document language is unknown. Its basis is reviewed here.
-        The Latin letter “Z” and Ethiopic letter <span lang="am">“ን”</span> are chosen as pairing symbols representative of the mean height .  They both feature broad
+        The Latin letter “Z” and Ethiopic letter “<span lang="am">ን</span>” are chosen as pairing symbols representative of the mean height .  They both feature broad
         horizontal strokes that are easy for the eye to follow as a nearly continuous stroke.
         Ethiopic letters that were introduced as an extension to the Ge’ez core will  typically feature a macron or other modifier at the top of
         a base letter in order to form the extension letter. The macron necessarily extends the height of a letter.  Using the top of the macron
@@ -154,10 +154,10 @@
       <figure id="align_below_accent"> <img src="images/Z-caron-Ny-Z-N-Alignment.png" alt=""/>
         <figcaption>Alignment below accent (better sizing).</figcaption>
       </figure>
-      <p>Going further, we may assume that the <span lang="am">ኝ</span> and Ž will align satisfactorily (optionally check any irregularities) and simply align the Z-ን pair.
+      <p>Going further, we may assume that the <span lang="am">ኝ</span> and Ž will align satisfactorily (optionally check any irregularities) and simply align the Z-<span lang="am">ን</span> pair.
         Phonetically the sequence of these two letters would sound like “zen”, hence the name.</p>
       <figure id="zen_reference_alignment"> <img src="images/Z-N-Alignment.png" alt=""/>
-        <figcaption>Z-ን or “Zen” Reference Alignment.</figcaption>
+        <figcaption>Z-<span lang="am">ን</span> or “Zen” Reference Alignment.</figcaption>
       </figure>
       <div class="issues">
         <p>Issues/Questions:</p>
@@ -450,7 +450,7 @@
 
     <section id="ethiopic_wordspace_at_latin_boundaries">
       <h4>Ethiopic Wordspace Alongside Other Punctuation And Line Breaks</h4>
-      <p>It modern literature where punctuation may be borrowed from Western writing, inconsistent formatting practices are found with respect to the presence of Ethiopic Wordspace (፡) alongside borrowed punctuation. It is helpful to establish rules for Ethiopic Wordspace in the presence of other symbols so that software grammar and formatting checkers can offer corrections leading to better quality and more consistent literature. The following rules are proposed:</p>
+      <p>It modern literature where punctuation may be borrowed from Western writing, inconsistent formatting practices are found with respect to the presence of Ethiopic Wordspace (<span lang="am">፡</span>) alongside borrowed punctuation. It is helpful to establish rules for Ethiopic Wordspace in the presence of other symbols so that software grammar and formatting checkers can offer corrections leading to better quality and more consistent literature. The following rules are proposed:</p>
 
        <ul>
          <li>A letter or number may border either side of Ethiopic Wordspace.</li>
@@ -664,17 +664,17 @@
 
     <section id="ethiopic_ordinal_notation">
       <h4>Ordinal Notation</h4>
-      <p>An ordinal is formed in Amharic when "ኛ", and in Tigrinya when "ይ", follows a cardinal number.
+      <p>An ordinal is formed in Amharic when "<span lang="am">ኛ</span>", and in Tigrinya when "<span lang="ti">ይ</span>", follows a cardinal number.
          The ordinal marker is often, but not always, rendered in superscript form. The superscript practice is most prevalent with ordinals
          in western numerals, but is also applied with Ethiopic numerals.</p>
       <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-          <li>What letters should be superscripted, and it what contexts? For example, "ሳ" and "ብር" may also be superscripted in
+          <li>What letters should be superscripted, and it what contexts? For example, "<span lang="am">ሳ</span>" and "<span lang="am">ብር</span>" may also be superscripted in
               presentation of prices but is not common in print (found mostly in store front advertising).</li>
           <li> Are ordinals always superscripted, or is superscript language or locale specific? Should superscript for ordinals be a setting?</li>
-          <li>An argument goes that superscript of "ኛ" should not follow an Ethiopic numerals since the counting system is put into a Ge’ez context
-              and Ge’ez literature does not use a superscript.  Yet "ኛ" is appropriate to Amharic language and is not a letter found in Ge’ez. The class of
+          <li>An argument goes that superscript of "<span lang="am">ኛ</span>" should not follow an Ethiopic numerals since the counting system is put into a Ge’ez context
+              and Ge’ez literature does not use a superscript.  Yet "<span lang="am">ኛ</span>" is appropriate to Amharic language and is not a letter found in Ge’ez. The class of
               literature may be at issue here, such a religious materials.</li>
           <li>What should the height (in percentage) of the superscripted symbol be with respect to the base text?</li>
           <li>How should the superscripted symbol be aligned vertically with the base text?</li>
@@ -765,7 +765,7 @@
         <li>When "." is used as the abbreviation marker, it is sometimes found at the end of the abbreviation.</li>
         <li>Confirm single word abbreviation rule.</li>
         <li>Are mixed abbreviation markers appropriate? Some well established abbreviations apply a "." as the marker, for example
-            "አዲስ አበባ ዩኒቨርሲቲ" becomes "አ.አ.ዩ".  This may reflect the chosen convention of the institute.</li>
+            "<span lang="am">አዲስ አበባ ዩኒቨርሲቲ</span>" becomes "<span lang="am">አ.አ.ዩ</span>".  This may reflect the chosen convention of the institute.</li>
         <li>What symbol is applied for foreign words transcribed into an Ethiopic languages?</li>
         <li>Do copy editors or publishers set a policy for abbreviation, or leave it up to the author to decide?</li>
         <li>Of interest: when are abbreviations first found in Ethiopic writing and in what form?</li>
@@ -823,26 +823,26 @@
 
      <section id="ethiopic_hyphenation">
        <h3>Hyphenation</h3>
-       <p>In classical Ethiopic writing the wordspace separator symbol (፡) negated the need for word hyphenation across a line of text. When wordspace fell out of favor in modern writing the practice of splitting a word across lines of text continued.  The reader would know to mentally reconstruct the word by relying on the knowledge of lexicon and context.</p>
+       <p>In classical Ethiopic writing the wordspace separator symbol (<span lang="am">፡</span>) negated the need for word hyphenation across a line of text. When wordspace fell out of favor in modern writing the practice of splitting a word across lines of text continued.  The reader would know to mentally reconstruct the word by relying on the knowledge of lexicon and context.</p>
        <div class="issues">
-    <p>Issues/Questions:</p>
-      <ol>
-        <li>When wordspace, “፡”, is used, what rules for splitting a word across lines apply?</li>
-        <li>When space is used, should Ethiopic writing use a hyphen “‐” to split words across lines?</li>
-        <li>When space is used, and if words should be split across lines (with or without a hyphen), are the following rules for word splitting suitable?
-          <ul>
-            <li>Words are split at a morpheme boundary, for example: ቤተ‐<br/>መንግሥት . </li>
-            <li>Words are split along a syllable boundary.</li>
-            <li>Words of a single syllable are not split over lines.</li>
-            <li>Words are split after a prefix.</li>
-            <li>Words are split before a suffix.</li>
-            <li>Numbers are not split over lines.</li>
-            <li>Words of two letters are not split over lines.</li>
-          </ul>
-        </li>
-      </ol>
-    </div>
-  </section>
+         <p>Issues/Questions:</p>
+         <ol>
+           <li>When wordspace, “<span lang="am">፡</span>”, is used, what rules for splitting a word across lines apply?</li>
+           <li>When space is used, should Ethiopic writing use a hyphen “‐” to split words across lines?</li>
+           <li>When space is used, and if words should be split across lines (with or without a hyphen), are the following rules for word splitting suitable?
+             <ul>
+               <li>Words are split at a morpheme boundary, for example: <span lang="am">ቤተ‐<br/>መንግሥት</span> . </li>
+               <li>Words are split along a syllable boundary.</li>
+               <li>Words of a single syllable are not split over lines.</li>
+               <li>Words are split after a prefix.</li>
+               <li>Words are split before a suffix.</li>
+               <li>Numbers are not split over lines.</li>
+               <li>Words of two letters are not split over lines.</li>
+             </ul>
+           </li>
+         </ol>
+       </div>
+     </section>
 
   <section id="ethiopic_justification">
     <h3>Justification</h3>
@@ -1865,7 +1865,7 @@
         <td>ISBN</td>
         <td lang="am">መዓመቍ</td>
         <td lang="ti">TBD</td>
-        <td>የመጽሐፉ ዓለምአቀፍ መለያ ቍጥር</td>
+        <td lang="am">የመጽሐፉ ዓለምአቀፍ መለያ ቍጥር</td>
       </tr>
       <tr id="term.part">
         <td>Part</td>
@@ -1877,13 +1877,13 @@
         <td>Preface</td>
         <td lang="am">መቅድም</td>
         <td lang="ti">TBD</td>
-        <td>Sometimes “መግለጫ ” in older books</td>
+        <td>Sometimes “<span lang="am">መግለጫ </span>” in older books</td>
       </tr>
       <tr id="term.table-of-contents">
         <td>Table of Contents</td>
-        <td lang="am">ማውጫ </td>
+        <td lang="am"><span lang="am">ማውጫ </td>
         <td lang="ti">TBD</td>
-        <td>Same as “መክሥተ አርእስት”?</td>
+        <td>Same as “<span lang="am">መክሥተ አርእስት</span>”?</td>
       </tr>
       <tr id="term.title">
         <td>Title</td>
@@ -1895,13 +1895,13 @@
         <td>TBD</td>
         <td lang="am">መሳሰቢያ</td>
         <td lang="ti"></td>
-        <td>Same as “ማሳሰቢያ”?</td>
+        <td>Same as “<span lang="am">ማሳሰቢያ</span>”?</td>
       </tr>
       <tr id="term.tbd-3">
         <td>TBD</td>
         <td lang="am">ማስታወቂያ</td>
         <td lang="ti"></td>
-        <td>"Advertisement" resolve this with “Author’s Note”. Sometimes seen as “ማስተዋወቂያ”.</td>
+        <td>"Advertisement" resolve this with “Author’s Note”. Sometimes seen as “<span lang="am">ማስተዋወቂያ</span>”.</td>
       </tr>
       <!-- መልመጃ -->
     </tbody>
