--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
     <p>In Classical era Ethiopic up to nine puncutation marks can be found. Though rarely, if ever, would all nine be found in a single document.
        The Classical Ethiopic punctuation inventory may <em>appear</em> to be larger in number as a result of bi-chromatic rendering which can be
        applied to any punctuation and in several different styles.  However, the bi-chromatic forms do not change the syntactic role of a given
-       punctuation.  In the Modern era, a third of the punctuation marks: ፧, ፨, and ፠ have largely fallen into disuse while a number of punctuation
+       punctuation.  In the Modern era, a third of the punctuation marks: <span lang="am">፧</span>, <span lang="am">፨</span>, and <span lang="am">፠</span> have largely fallen into disuse while a number of punctuation
        marks from Western practices have been adopted. Bi-chromatic punctuation is now reserved for spiritual materials and remains a calligraphic practice.</p>
     <p>Ethiopic punctuation segments text and is non-encompassing. 
        The Ethiopic word separator, labeled “Ethiopic Wordspace” in the Unicode standard, is given special attention in this section as follows more
        complex rules of interaction with other punctuation as well as justification.  Ethiopic punctuation is often aligned with similar English
        punctuation though these associations must be understood as approximate.  Ethiopic fullstop and wordspace are highly regular in their application,
-       others, particularly ፣, ፤, and ፥ will be consistently used within a document but their roles may change between authors or institutes.  A detailed
+       others, particularly <span lang="am">፣</span>, <span lang="am">፤</span>, and <span lang="am">፥</span> will be consistently used within a document but their roles may change between authors or institutes.  A detailed
        review of punctuation semantics is beyond the scope of this document, however Ethiopic comma is given special attention in the following section.</p>
 
     <table>
@@ -375,7 +375,7 @@
         <p>Issues/Questions:</p>
           <ol>
             <li>Are the above descriptions correct?</li>
-            <li>Should authors be able to set a default comma (፣,፥,፡) in software?</li>
+            <li>Should authors be able to set a default comma (<span lang="am">፣</span>,<span lang="am">፥</span>,<span lang="am">፡</span>) in software?</li>
             <li>Should authors be able to set a default space symbol in software?</li>
           </ol>
         </div>
@@ -384,7 +384,7 @@
     <section id="wordspace_in_comma_context">
       <h4>Ethiopic Wordspace in the Context of Comma</h4>
       <p>In recent decades some communities have adopted a practice of employing the wordspace symbol as a comma when <span class="uname">U+0020 SPACE</span> [ ] is used as the word separator. The interpretation of the symbol is then dependent on the context of the writing convention in use by the author. Accordingly, an application user setting could be offered to set the symbol context.</p>
-      <p>An alternative view point on this practice is that <span class="uname">U+1363 ETHIOPIC COMMA [፣]</span> is in fact in use by these user communities; however its glyph has decayed whereby the line segment is lost and so it visually coincides with <span class="uname">U+1361 ETHIOPIC WORDSPACE</span> [፡].  Under this perspective, a simple solution would be modify an Ethiopic font for these users (perhaps adding an alternative glyph in an OpenType stylistic set) where the Ethiopic comma character address and semantics remain intact though the visual form has been tailored to meet aesthetic needs. </p>
+      <p>An alternative view point on this practice is that <span class="uname">U+1363 ETHIOPIC COMMA [<span lang="am">፣</span>] is in fact in use by these user communities; however its glyph has decayed whereby the line segment is lost and so it visually coincides with <span class="uname">U+1361 ETHIOPIC WORDSPACE</span> [<span lang="am">፡</span>].  Under this perspective, a simple solution would be modify an Ethiopic font for these users (perhaps adding an alternative glyph in an OpenType stylistic set) where the Ethiopic comma character address and semantics remain intact though the visual form has been tailored to meet aesthetic needs. </p>
       <figure> <img src="images/corpus-samples/Nebiy-Mohammed-Page-35-Cropped.png" alt=" " width="800" height="540"/>
         <figcaption>Ethiopic Wordspace in the context of comma (Itedalewe, 1987 (1979 EC))</figcaption>
       </figure>
@@ -872,7 +872,7 @@
     <section id="justification_with_word_bound_wordspace">
       <h5>Justification with Word Bound Wordspace and Punctuation</h5>
       <p>In keeping with line justification for Latin script, the non-printed or “blank space” (space and gaps) between words is treated as stretchable. The width of the space symbol itself will be elongated to some aesthetic width value that may vary from space symbol to space symbol across a printed line. In Ethiopic justification, the blank space between the Ethiopic word separator and the words it separates is likewise allowed to stretch. This stretching of blank space may be either symmetrical (“centered”) or asymmetrical but in the latter case space stretching is always between the right side of the separator and the following word –referred to here as “word bound”. </p>
-      <p>In  “word bound”  justification  the  word  separator,   which  may  be  either  a  punctuation  symbol  or <span class="uname">U+1361   ETHIOPIC WORDSPACE</span> [፡], appears to adhere to the word to the left as if it were its final character. Figures <a href="#justification_word_bound"></a> and <a href="#justification_in_historia_aethiopica"></a> both illustrate the word bound style.</p>
+      <p>In  “word bound”  justification  the  word  separator,   which  may  be  either  a  punctuation  symbol  or <span class="uname">U+1361   ETHIOPIC WORDSPACE</span> [<span lang="am">፡</span>], appears to adhere to the word to the left as if it were its final character. Figures <a href="#justification_word_bound"></a> and <a href="#justification_in_historia_aethiopica"></a> both illustrate the word bound style.</p>
       <figure id="justification_word_bound"> <img src="images/corpus-samples/Ografi-Page-35-Cropped.png" alt=" " width="800" height="223" />
         <figcaption>Ethiopic justification in word bound style (Erikson, 1921 (1913 EC))</figcaption>
       </figure>
@@ -899,7 +899,7 @@
 
     <section id="spacing_threshold_following_full_stop">
       <h5>Spacing Threshold Following Full Stop</h5>
-      <p>In the regular mode of Ethiopic justification (both  forms) <span class="uname">U+1362 ETHIOPIC FULL STOP</span> [።] will be treated equally with all other punctuation symbols.  In a second mode, the Ethiopic full stop will have special spacing rules applied to it whereby more separation space is allowed following the symbol and the start of the next word.  In a sense, the right side space of the full stop is “more elastic” than in the regular mode.  The elasticity rule and the visual effect are similar to that of the final line of a fully justified paragraph in Western text.  When the final line of a paragraph of Latin script crosses a certain horizontal threshold, the line will become fully justified. Below that threshold the line will appear left aligned.  The same rule appears to be applied to the Ethiopic full stop but on any line of the paragraph.  An illustration of this sub-mode is depicted in the following: </p>
+      <p>In the regular mode of Ethiopic justification (both  forms) <span class="uname">U+1362 ETHIOPIC FULL STOP</span> [<span lang="am">።</span>] will be treated equally with all other punctuation symbols.  In a second mode, the Ethiopic full stop will have special spacing rules applied to it whereby more separation space is allowed following the symbol and the start of the next word.  In a sense, the right side space of the full stop is “more elastic” than in the regular mode.  The elasticity rule and the visual effect are similar to that of the final line of a fully justified paragraph in Western text.  When the final line of a paragraph of Latin script crosses a certain horizontal threshold, the line will become fully justified. Below that threshold the line will appear left aligned.  The same rule appears to be applied to the Ethiopic full stop but on any line of the paragraph.  An illustration of this sub-mode is depicted in the following: </p>
       <figure> <img src="images/corpus-samples/KWK-Page-159-Cropped.png" alt=" " width="800" height="297" />
         <figcaption>Justification Sample from  Maṣḥafa Sawāsew, Page 159 (Kifle, 1955 (1948 EC))</figcaption>
       </figure>
@@ -916,7 +916,7 @@
     <section id="shorcomings_in_electronic_typesetting">
       <h5>Shortcomings Found in Electronic Typesetting Systems</h5>
       <p>To date, computer software that typesets text has applied justification rules for blank space stretching that were designed to meet publishing requirements in the Western world. When the same rules are applied to Ethiopic text, the results are unsatisfactory as they do not meet user expectations. Largely responsible for the formatting dissonance when Western justification is applied to Ethiopic text, is the absence of a white space symbol in the writing system. There is no explicit white space symbol (in classic Ethiopic writing) to be “stretched”.</p>
-       <p>Formatting algorithms will then process <span class="uname">U+1361 ETHIOPIC WORDSPACE</span> [፡] as a punctuation symbol where word enclosing rules, rather than word spacing rules, will be applied. While still stretchable, “white space” in the Ethiopic wordspace is implicit rather than explicit. For a complete solution, software will ultimately need to be enhanced to stretch implicit space as required. Reclassifying the Ethiopic wordspace as a “Zs” symbol is expected to help alleviate justification issues and clears the way for software firms to implement comprehensive support for Ethiopic justification. Since the Ethiopic wordspace interferes with justification in present day software, authors may opt not to use it or may “pad” wordspace and Ethiopic punctuation with explicit white space to produce the desired justification style (i.e. <a href="#justification_with_word_bound_wordspace">Word Bound</a> or <a href="justification_with_centered_wordspace">Centered</a>). To properly render text formatted in this way, future “wordspace aware” software, should elide spaces bordering Ethiopic wordspace and punctuation when producing justified text.</p>
+       <p>Formatting algorithms will then process <span class="uname">U+1361 ETHIOPIC WORDSPACE</span> [<span lang="am">፡</span>] as a punctuation symbol where word enclosing rules, rather than word spacing rules, will be applied. While still stretchable, “white space” in the Ethiopic wordspace is implicit rather than explicit. For a complete solution, software will ultimately need to be enhanced to stretch implicit space as required. Reclassifying the Ethiopic wordspace as a “Zs” symbol is expected to help alleviate justification issues and clears the way for software firms to implement comprehensive support for Ethiopic justification. Since the Ethiopic wordspace interferes with justification in present day software, authors may opt not to use it or may “pad” wordspace and Ethiopic punctuation with explicit white space to produce the desired justification style (i.e. <a href="#justification_with_word_bound_wordspace">Word Bound</a> or <a href="justification_with_centered_wordspace">Centered</a>). To properly render text formatted in this way, future “wordspace aware” software, should elide spaces bordering Ethiopic wordspace and punctuation when producing justified text.</p>
       <p>The following samples depict formatting of Kidane Wolde Kifle’s seminal work <cite>Maṣḥafa Sawāsew</cite> with a popular word processor (Kifle, 1955 (1948 EC)) under the limitations of Western spacing rules justification.</p>
       <figure> <img src="images/corpus-samples/KWK-Page-65-Cropped.png" alt=" " width="800" height="297" />
         <figcaption>Full Justification Sample from Maṣḥafa Sawāsew, Page 65 (Kifle, 1955 (1948 EC))</figcaption>
@@ -927,7 +927,7 @@
       <figure> <img src="images/justification_sample_with_spaces.png" alt=" " width="806"/>
         <figcaption>The sample from the earlier figure  with space (U+0020) replacing Ethiopic wordspace. Space characters  have additionally  been added following Ethiopic punctuation. </figcaption>
       </figure>
-      <p>In digital documents such as in web pages and eBooks, it is recommended that the appearance of either <span class="uname">U+0020 SPACE</span> [ ] or <span class="uname">U+1361 ETHIOPIC WORDSPACE</span> [፡] be configurable as a user preference. An easy to access “space” toggle button would enhance a viewing application’s usability.</p>
+      <p>In digital documents such as in web pages and eBooks, it is recommended that the appearance of either <span class="uname">U+0020 SPACE</span> [ ] or <span class="uname">U+1361 ETHIOPIC WORDSPACE</span> [<span lang="am">፡</span>] be configurable as a user preference. An easy to access “space” toggle button would enhance a viewing application’s usability.</p>
         </section>
     </section>
 
@@ -1590,7 +1590,7 @@
 
     <section id="h_page_margins">
       <h3>Page Margins</h3>
-      <p>Proper document layout is very import for religious works in the Ge’ez traditions. Certain works like homiliaries (such as ድርሳነ፡ሚካኤል) are consistently formatted in two columns and the Synaxarium (መጽሐፈ፡ስንክሳር) in three.  Margins in this class of literature will most common exhibit a 1x2x4 ratio where the top and fore edge margins are twice that of the gutter and half that of the bottom (depicted in the following figure).</p>
+      <p>Proper document layout is very import for religious works in the Ge’ez traditions. Certain works like homiliaries (such as <span lang="am">ድርሳነ፡ሚካኤል</span>) are consistently formatted in two columns and the Synaxarium (<span lang="am">መጽሐፈ፡ስንክሳር</span>) in three.  Margins in this class of literature will most common exhibit a 1x2x4 ratio where the top and fore edge margins are twice that of the gutter and half that of the bottom (depicted in the following figure).</p>
       <figure> <img src="images/GeezMargins.png" alt=" "/>
         <figcaption>Page margins in Ge’ez literature.</figcaption>
       </figure>
@@ -1709,17 +1709,17 @@
          employs the following convention: </p>
       <p><code> &nbsp;&nbsp;&nbsp;&nbsp;
             &lt;Citation&gt; ::=
-            &lt;Author Full Name&gt; "፤"
-            &lt;Publication Date&gt; "፤"
+            &lt;Author Full Name&gt; "<span lang="am">፤</span>"
+            &lt;Publication Date&gt; "<span lang="am">፤</span>"
             &lt;i&gt;&lt;Title&gt;&lt;/i&gt;
-            &lt;City&gt; "፤"
-            &lt;Publisher&gt; "።"<br/>
+            &lt;City&gt; "<span lang="am">፤</span>"
+            &lt;Publisher&gt; "<span lang="am">።</span>"<br/>
             </code></p>
       <p>where</p>
       <p><code> &nbsp;&nbsp;&nbsp;&nbsp;
-            &lt;Title&gt; ::= &lt;Terminated Title&gt; | ( &lt;Unterminated Title&gt; "።" )<br/>
+            &lt;Title&gt; ::= &lt;Terminated Title&gt; | ( &lt;Unterminated Title&gt; "<span lang="am">።</span>" )<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            &lt;Terminated Title&gt; ::= &lt;Unterminated Title&gt; [፡፤።?]<br/>
+            &lt;Terminated Title&gt; ::= &lt;Unterminated Title&gt; [<span lang="am">፡፤።?</span>]<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;
             &lt;Unterminated Title&gt; ::= &lt;Text&gt; [:Letter:]</code></p>
           An example:
